--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     ],
     "dependencies": {
         "er": "3.1.x",
-        "esui": "3.1.x"
+        "esui": "3.1.x",
+        "underscore": "1.4.x"
     },
     "main": "main",
     "description": "EF是ER与ESUI整合而成的高效率业务系统开发框架。",
