--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dependencies": {
         "er": "3.1.x",
         "esui": "3.1.x",
-        "underscore": "1.4.x"
+        "underscore": "1.4.x",
+        "mini-event": ">=0.9.0"
     },
     "main": "main",
     "description": "EF是ER与ESUI整合而成的高效率业务系统开发框架。",
