--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     ],
     "dependencies": {
         "er": "3.1.x",
-        "esui": "3.1.x",
+        "esui": ">=3.1.0-alpha.5",
         "underscore": "1.4.x",
         "mini-event": ">=0.9.0"
     },
