--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
     "name": "ef",
     "version": "3.1.0-alpha.3",
     "maintainers": [
-        { "name": "otakustay", "email": "otakustay@gmail.com" }
+        {
+            "name": "otakustay",
+            "email": "otakustay@gmail.com"
+        }
     ],
     "dependencies": {
         "er": "3.1.x",
         "esui": ">=3.1.0-alpha.5",
         "underscore": "1.5.x",
-        "mini-event": ">=0.9.0"
+        "mini-event": "1.x",
+        "etpl": "2.x",
+        "moment": "2.x"
     },
     "main": "main",
     "description": "EF是ER与ESUI整合而成的高效率业务系统开发框架。",
