--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ef",
-    "version": "3.1.0-alpha.3",
+    "version": "3.1.0-beta.1",
     "maintainers": [
         {
             "name": "otakustay",
@@ -9,7 +9,7 @@
     ],
     "dependencies": {
         "er": "3.1.x",
-        "esui": ">=3.1.0-alpha.5",
+        "esui": "3.1.x",
         "underscore": "1.5.x",
         "mini-event": "1.x",
         "etpl": "2.x",
