修复自动更新require配置会出错的问题

--- a/demo/chi/package.json
+++ b/demo/chi/package.json
@@ -3,6 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "ef": "3"
+    "ef": "3.1.x"
+  },
+  "edp": {
+        "wwwroot": "/",
+        "depDir": "dep",
+        "srcDir": "src",
+        "loaderAutoConfig": "js,htm,html,tpl,vm,phtml",
+        "loaderUrl": "http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-0/esl.js",
+        "dependencies": {
+            "ef": "3.1.x"
+        }
   }
 }
