--- a/module.conf
+++ b/module.conf
@@ -3,6 +3,11 @@
     "paths": {},
     "packages": [
         {
+            "name": "eoo",
+            "location": "../dep/eoo/0.0.5/src",
+            "main": "oo"
+        },
+        {
             "name": "er",
             "location": "../dep/er/3.1.0-beta.3/src",
             "main": "main"
