--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ef",
-    "version": "3.1.0-beta.3",
+    "version": "3.1.0",
     "maintainers": [
         {
             "name": "otakustay",
